--- a/.github/workflows/buildit.yaml
+++ b/.github/workflows/buildit.yaml
@@ -8,9 +8,11 @@ jobs:
     - name: "Clone source"
       uses: actions/checkout@v4
       with:
-        submodules: 'true'
+        submodules: recursive
     - name: "Setup msvc"
       uses: ilammy/msvc-dev-cmd@v1
+    - name: Debug file structure
+      run: dir src
     - name: "Build"
       run: |
         mkdir build
