--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,11 @@ if(NOT minhook_POPULATED)
     target_include_directories(minhook PUBLIC ${minhook_SOURCE_DIR}/include)
 endif()
 
-add_library(cslol-dll-legacy SHARED src/cslol-api.h src/cslol-dll-legacy.c)
-target_link_libraries(cslol-dll-legacy PRIVATE minhook)
+add_library(cslol-dll SHARED src/cslol-api.h src/cslol-dll.c)
+target_link_libraries(cslol-dll PRIVATE minhook)
 
 add_executable(cslol-inj src/cslol-inj.c)
-target_link_libraries(cslol-inj PRIVATE cslol-dll-legacy)
+target_link_libraries(cslol-inj PRIVATE cslol-dll)
 
 add_custom_command(TARGET cslol-inj
     POST_BUILD
