--- a/.github/workflows/buildit.yaml
+++ b/.github/workflows/buildit.yaml
@@ -19,6 +19,28 @@ jobs:
         cd build
         cmake -G "NMake Makefiles" "-DCMAKE_BUILD_TYPE:STRING=RelWithDebInfo" "-DCMAKE_C_COMPILER:STRING=clang-cl" "-DCMAKE_MSVC_RUNTIME_LIBRARY:STRING=MultiThreaded" ..
         cmake --build .
+    - name: Generate self-signed cert with email
+      run: |
+        $cert = New-SelfSignedCertificate `
+          -Type CodeSigning `
+          -Subject "CN=MyCompany, E=myemail@example.com" `
+          -CertStoreLocation "Cert:\CurrentUser\My"
+    
+        Export-PfxCertificate `
+          -Cert $cert `
+          -FilePath mycert.pfx `
+          -Password (ConvertTo-SecureString "password123" -AsPlainText -Force)
+    - name: Locate signtool
+      run: |
+        where signtool
+    - name: List SDK versions
+      run: dir "C:\Program Files (x86)\Windows Kits\10\bin"
+    - name: List build outputs
+      run: |
+        dir /s /b *.dll
+    - name: Sign DLL
+      run: |
+        signtool sign /f mycert.pfx /p password123 /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 MyLibrary.dll
     - name: "Package"
       shell: bash
       run: |
