--- a/.github/workflows/buildit.yaml
+++ b/.github/workflows/buildit.yaml
@@ -37,10 +37,10 @@ jobs:
       run: dir "C:\Program Files (x86)\Windows Kits\10\bin"
     - name: List build outputs
       run: |
-        dir /s /b *.dll
+        Get-ChildItem -Recurse -Filter *.dll | ForEach-Object { $_.FullName }
     - name: Sign DLL
       run: |
-        signtool sign /f mycert.pfx /p password123 /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 MyLibrary.dll
+        "C:\Program Files (x86)\Windows Kits\10\bin\10.0.26100.0\x64\signtool.exe" sign /f mycert.pfx /p password123 /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 MyLibrary.dll
     - name: "Package"
       shell: bash
       run: |
