--- a/.github/workflows/buildit.yaml
+++ b/.github/workflows/buildit.yaml
@@ -30,9 +30,6 @@ jobs:
           -Cert $cert `
           -FilePath mycert.pfx `
           -Password (ConvertTo-SecureString "password123" -AsPlainText -Force)
-    - name: Locate signtool
-      run: |
-        where signtool
     - name: List SDK versions
       run: dir "C:\Program Files (x86)\Windows Kits\10\bin"
     - name: List build outputs
@@ -40,7 +37,8 @@ jobs:
         Get-ChildItem -Recurse -Filter *.dll | ForEach-Object { $_.FullName }
     - name: Sign DLL
       run: |
-        "C:\Program Files (x86)\Windows Kits\10\bin\10.0.26100.0\x64\signtool.exe" sign /f mycert.pfx /p password123 /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 MyLibrary.dll
+        & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.26100.0\x64\signtool.exe" sign /f mycert.pfx /p password123 /fd SHA256 /tr http://timestamp.digicert.com /td SHA256 "${{ github.workspace }}\build\cslol-dll.dll"
+
     - name: "Package"
       shell: bash
       run: |
